# project_marica_car_generator

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ProjectMaricaCarGenerator.pro  README.md  defaultfragmentshader.frag  defaultvertexshader.vert  mainopenglwidget.cpp  mainopenglwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  object.cpp  object.h  scene.cpp  scene.h  unanimation.cpp  unanimation.h
.github/workflows/: cmake.yml
example/MaricaFlatoutCollision/StaticMesh/: pm_speedevil_intcoll.pskx  pm_speedevil_kcoll.psk  pm_speedevil_tireKColl.pskx
example/MaricaFlatoutModels/SkeletalMesh/: pm_speedevil_model01.psk
example/MaricaFlatoutTex/Texture/: common.tga  dashboard.tga  flares.tga  interior.tga  shock.tga  skin1.tga  tire_01.tga
includes/: collision_object.h  collision_parser.h  errorsystem.h  grid.h  impl_errorsystem.h  mainopenglwidget.h  mainwindow.h  mesh.h  model.h  object.h  openglsimulationwidget.h  physicworld.h  physobject.h  project_config.h  project_model.h  resource_manager.h  scene.h  unanimation.h  updatable.h  vector3d.h  version.h
includes/physics/: physicworld.h  physobject.h
includes/physics/shapes/: box.h  collection.h  cylinder.h  mesh.h  offset.h  shape.h  sphere.h
includes/render_system/: aabb.h  batch.h  batching.h  box.h  camera.h  camera_manager.h  color.h  drawable.h  edge_array.h  element_buffer.h  face.h  fragment_shader.h  garbage_collector.h  material.h  mesh.h  render_info.h  render_node.h  renderer.h  scene.h  scene_node.h  shader_program.h  texture.h  transform.h  triangle_array.h  vertex_array.h  vertex_buffer.h  vertex_shader.h  wireframe.h
includes/render_system/camera/: camera_controller.h  free_camera_controller.h
includes/resources/: dds_info.h  file.h  image_info.h  model.h  resource_manager.h  resource_pointer.h  resource_submanager.h  skeletal.h  unanimation.h  wireframe_model.h
includes/resources/ase_reader/: ase_reader.h  ase_reader_node.h  ase_reader_node_analyzer.h  ase_tokenizer.h
includes/resources/ase_reader/rules/: array.h  dict.h  float.h  int.h  lambda.h  num_array.h  pair.h  rule.h  set.h  string.h  value.h
includes/resources/loaders/: file_loader.h  image_loader.h  loader.h  model_loader.h  texture_loader.h
includes/sound/: context.h  sound.h
includes/utils/: callback_collection.h  gl.h  openal.h  range_array.h  scope_guard.h
includes/utils/concepts/: can_call.h
includes/utils/math/: angle.h  geometry_prototype.h  line.h  matrix.h  plane.h  quaternion.h  rot3.h  utils.h  vec3.h
includes/utils/shapes/: box.h  convex_hull.h  shape.h  sphere.h
includes/widgets/: app.h  bone_selector_widget.h  configurationWidget.h  configuration_widget.h  file_picker_widget.h  float_input.h  mainwindow.h  opengl_glfw_window.h  openglview.h  sound_player.h  texture_array_widget.h  vec3_widget.h
includes/widgets/event_data/: float.h  indexed_texture.h  vec3.h
includes/widgets/pgproperties/: texture_array_pgproperty.h  vec3f_pgproperty.h
includes/widgets/react/: primitive.h
includes/widgets/variants/: vec3f.h
resources/shaders/: colorfragmentshader.frag  colorvertexshader.vert  defaultfragmentshader.frag  defaultvertexshader.vert  meshfragmentshader.frag  meshvertexshader.vert  texturefragmentshader.frag  texturevertexshader.vert
resources/textures/: DefaultTexture.tga
sources/: collision_object.cpp  collision_parser.cpp  errorsystem.cpp  grid.cpp  impl_errorsystem.cpp  main.cpp  mainopenglwidget.cpp  mainwindow.cpp  mesh.cpp  model.cpp  object.cpp  openglsimulationwidget.cpp  physicworld.cpp  physobject.cpp  project_model.cpp  resource_manager.cpp  scene.cpp  unanimation.cpp  vector3d.cpp
sources/physics/: physicworld.cpp  physobject.cpp
sources/physics/shapes/: box.cpp  collection.cpp  cylinder.cpp  mesh.cpp  offset.cpp  sphere.cpp
sources/render_system/: aabb.cpp  batch.cpp  batching.cpp  box.cpp  camera.cpp  camera_manager.cpp  color.cpp  drawable.cpp  edge_array.cpp  element_buffer.cpp  fragment_shader.cpp  garbage_collector.cpp  mesh.cpp  renderer.cpp  scene.cpp  scene_node.cpp  shader_program.cpp  texture.cpp  transform.cpp  triangle_array.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_shader.cpp  wireframe.cpp
sources/render_system/camera/: free_camera_controller.cpp
sources/resources/: dds_info.cpp  file.cpp  image_info.cpp  model.cpp  resource_manager.cpp  resource_pointer.cpp  resource_submanager.cpp  skeletal.cpp  unanimation.cpp  wireframe_model.cpp
sources/resources/ase_reader/: ase_reader.cpp  ase_reader_node.cpp  ase_reader_node_analyzer.cpp  ase_tokenizer.cpp
sources/resources/ase_reader/rules/: dict.cpp  float.cpp  int.cpp  lambda.cpp  set.cpp  string.cpp  value.cpp
sources/resources/loaders/: file_loader.cpp  image_loader.cpp  model_loader.cpp  texture_loader.cpp
sources/sound/: context.cpp  sound.cpp
sources/utils/math/: angle.cpp  geometry_prototype copy.cpp  geometry_prototype.cpp  line.cpp  plane.cpp  quaternion.cpp  rot3.cpp  utils.cpp
sources/utils/shapes/: box.cpp  convex_hull.cpp  sphere.cpp
sources/widgets/: app.cpp  bone_selector_widget.cpp  configurationWidget.cpp  configuration_widget.cpp  file_picker_widget.cpp  float_input.cpp  mainwindow.cpp  opengl_glfw_window.cpp  openglview.cpp  sound_player.cpp  texture_array_widget.cpp
sources/widgets/pgproperties/: texture_array_pgproperty.cpp  vec3f_pgproperty.cpp
sources/widgets/variants/: vec3f.cpp
ui/: edit_widget.cpp  edit_widget.h  edit_widget.ui  mainwindow.ui
